--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
    
+   <section class="top-bar">
+       <div class="container-fluid">
+           <div class="row">
+               <div class="col-md-6">
+                   <img src="images/sharpsightlogo.webp" class="logo">
+               </div>
+               <div class="col-md-6"></div>
+           </div>
+       </div>
+   </section>
 
     <script type="text/javascript" src="js/jquery.slim.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
