images added and sections created

--- a/index.html
+++ b/index.html
@@ -14,22 +14,12 @@
     </head>
     <body>
         <section class="top-bar">
-            <div class="container-fluid">
+            <div class="container-fluid cf">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-9 col-xs-6">
                         <img src="images/sharpsightlogo.webp" class="logo">
                     </div>
-                    <div class="col-md-6"></div>
-                </div>
-            </div>
-        </section>
-        <section class="banner">
-            <div class="elementor-background-overlay"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h4 class="ff">YOUR VISION, OUR PRIORITY</h4>
-                        <h2 class="ff">Book An Appointment For Lasik</h2>
+                    <div class="col-md-3 col-xs-6 top-bar-buton">
                         <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
                             Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
                         </button>
@@ -37,6 +27,270 @@
                 </div>
             </div>
         </section>
+        <section class="banner">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="banner-content">
+                            <h4 class="ff text-white">YOUR VISION, OUR PRIORITY</h4>
+                            <h2 class="ff text-white">Book An Appointment For Lasik</h2>
+                            <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
+                                Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="benefits-section">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>Benefit</h4>
+                        <h2>Benefits With Sharp Sight</h2>
+                    </div>
+                    <div class="col-md-6">
+                        <p>Over the years we have achieved a global reputation of being the best hospital for LASIK laser eye surgery in Delhi-NCR.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="image-box">
+                            <img src="images/surgeons.webp">
+                            <h3>Experienced Lasik Surgeons</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-box">
+                            <img src="images/eye.webp">
+                            <h3>Experienced Lasik Surgeons</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-box">
+                            <img src="images/microscope.webp">
+                            <h3>Experienced Lasik Surgeons</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About Us Start -->
+        <section class="about-us">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="images/Sharp-Sight-A-Leading-Eyecare-Hospital.webp" width="100%">
+                    </div>
+                    <div class="col-md-6">
+                        <h4>about us</h4>
+                        <h2>We Are A Leading Eye Care Hospital</h2>
+                        <div class="skill_bar">
+                            <div class="skill">
+                                <div class="skill-name">Customer Satisfaction</div>
+                                <div class="skill-bar">
+                                    <div class="percentage" id="cs-bar">0%</div>
+                                </div>
+                            </div>
+                            <div class="skill">
+                                <div class="skill-name">Surgery Successs</div>
+                                <div class="skill-bar">
+                                    <div class="percentage" id="ss-bar">0%</div>
+                                </div>
+                            </div>
+                            <div class="skill">
+                                <div class="skill-name">Doctor Rating</div>
+                                <div class="skill-bar">
+                                    <div class="percentage" id="dr-bar">0%</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pop_bttn">
+                            <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
+                                Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- About Us End -->
+
+        <!-- Factoids Start -->
+        <section id="counter_sec">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                      <div class="row">
+                        <div class="four col-md-3">
+                        <div class="counter-box"> <i class="fa fa-smile-o" aria-hidden="true"></i> <span class="counter">500000</span>
+                            <p>Eye Surgeries</p>
+                        </div>
+                    </div>
+                    <div class="four col-md-3">
+                        <div class="counter-box"> <i class="fa fa-hospital-o" aria-hidden="true"></i> <span class="counter">24 </span>
+                            <p>Eye Treatments</p>
+                        </div>
+                    </div>
+                    <div class="four col-md-3">
+                        <div class="counter-box"> <i class="fa fa-home" aria-hidden="true"></i> <span class="counter">50 </span>
+                            <p>Doctors</p>
+                        </div>
+                    </div>
+                    <div class="four col-md-3">
+                        <div class="counter-box"> <i class="fa fa-user"></i> <span class="counter">14</span>
+                            <p>Hospitals</p>
+                        </div>
+                    </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Factoids End -->
+
+        <!-- FAQS Start -->
+        <section class="faqs">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="accordion" id="accordionExample">
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                What is Lasik Procedure?
+                              </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <p>Lasik is the latest vision corrective surgery for a very delicate part of the eye. Millions of people have tried this latest procedure and corrected their vision within 5-7 days. If you’re wearing glasses and contact lenses, you must be thinking about this surgery to get rid of glasses and contact lenses.</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Are both eyes treated at one sitting during the LASIK procedure?
+                              </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <p>Patients normally prefer to have both eyes treated in one sitting.</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Are there any risks and side effects of LASIK?
+                              </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <p>With the latest techniques and world-class equipment, LASIK eye surgery is considered to be one of the safest ways to get rid of glasses. But, like any surgical procedure, LASIK surgery too can pose certain side effects which include dry eyes and glare which are temporary and will eventually subside as the eye heals within a month .</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                What is the best time to get LASIK?
+                              </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <p>Many of us think that summer is not the ideal season to get Lasik surgery done because of rising temperatures and humidity, while some believe that winters are the perfect time to get Lasik surgery done because of cooler temperatures. But, adding to this point is every season fine for Lasik surgery as there are no major post-surgery precautions. So, whether it is summer or winter both are ideal seasons for the Lasik procedure.</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFive">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                What happens post-LASIK eye surgery?
+                              </button>
+                            </h2>
+                            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <p>LASIK is a daycare procedure and therefore, post-surgery you are allowed to go home on the same day. Antibiotic and Lubricant drops are administered post operatively . The whole procedure takes around 10-15minutes only. Visual recovery may vary from a few hours to a few days until it gets stabilized. However, you will be allowed to return to your normal activities within 2-3 days following surgery. Follow-up and aftercare visits are to be adhered to strictly as per your surgeon’s directions.</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingSix">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                Can LASIK be performed again?
+                              </button>
+                            </h2>
+                            <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <p>A second, or enhancement procedure can be performed to provide additional correction very rarely if required only if some residual refractive error after 2 months . However, most people do not require additional surgery.</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FAQS End -->
+
+        <!-- why choose us Start -->
+        <section class="why-choose-us">
+            <div class="container-fluid cff">
+                <div class="row">
+                    <div class="col-md-6 col-6-pointers">
+                        <h4 class="ff text-white">why choose us ?</h4>
+                        <h2 class="ff text-white">Better Vision Deserves The Latest Technology</h2>
+                        <ul class="banner_ul_treatment">
+                          <li class="banner_li">NABH Certified</li>
+                          <li class="banner_li">14 World Class Eye Hospitals in India</li>
+                          <li class="banner_li">World Class Infrastructure</li>
+                          <li class="banner_li">Latest Technologies</li>
+                          <li class="banner_li">Highly Experienced and Trained Eye Specialists</li>
+                          <li class="banner_li">More than 2 Decades of experience in Eye Care</li>
+                          <li class="banner_li">Treated more than 10 Lac delighted patients</li>
+                          <li class="banner_li">Delivering the high-quality eye treatment</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 col-6-image-sec">
+                        <!-- <img src="images/Sharp-Sight-Better-Vision-Deserves-The-Latest-Technology.webp" width="100%"> -->
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- why choose us End -->
+
+        <!-- Footer Start-->
+        <footer>
+            <section class="footer">
+                <div class="container-fluid cf">
+                    <div class="row footer_bt">
+                        <div class="col-md-9 col-xs-6 footer_pd0">
+                            <img src="images/sharpsightlogo.webp" class="logo">
+                        </div>
+                        <div class="col-md-3 col-xs-6 top-bar-buton footer_pd0">
+                            <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
+                                Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="copyright">
+                <div class="container-fluid cf">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <p class="cr_p">Copyright © 2023. All rights reserved.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </footer>
+        <!-- Footer End-->
+
         <!-- Pop Up -->
         <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog">
@@ -66,7 +320,27 @@
                 </div>
             </div>
         </div>
-    <script type="text/javascript" src="js/jquery.slim.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <!-- Pop End -->
+
+        <script type="text/javascript" src="js/script.js"></script>    
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+        <script>
+          $(document).ready(function() {
+            $('.counter').each(function () {
+              $(this).prop('Counter',0).animate({
+                Counter: $(this).text()
+              }, 
+            {
+              duration: 4000,
+              easing: 'swing',
+              step: function (now) {
+                $(this).text(Math.ceil(now));
+                }
+              });
+            });
+          });
+     </script>
     </body>
 </html>
