--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
             </div>
         </section>
 
+        <!-- Benefit Start -->
         <section class="benefits-section">
             <div class="container-fluid cf">
                 <div class="row">
                     <div class="col-md-6">
-                        <h4>Benefit</h4>
-                        <h2>Benefits With Sharp Sight</h2>
+                        <h4 class="ff text-white">Benefit</h4>
+                        <h2 class="ff text-white">Benefits With Sharp Sight</h2>
                     </div>
                     <div class="col-md-6">
-                        <p>Over the years we have achieved a global reputation of being the best hospital for LASIK laser eye surgery in Delhi-NCR.</p>
+                        <p class="cr_p">Over the years we have achieved a global reputation of being the best hospital for LASIK laser eye surgery in Delhi-NCR.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -76,6 +77,7 @@
                 </div>
             </div>
         </section>
+        <!-- Benefit End -->
 
         <!-- About Us Start -->
         <section class="about-us">
