--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+        <!-- Top Bar Start -->
         <section class="top-bar">
             <div class="container-fluid cf">
                 <div class="row">
@@ -27,6 +28,9 @@
                 </div>
             </div>
         </section>
+        <!-- Top Bar End -->
+
+        <!-- Banner Start -->
         <section class="banner">
             <div class="container-fluid cf">
                 <div class="row">
@@ -42,6 +46,7 @@
                 </div>
             </div>
         </section>
+        <!-- Banner End -->
 
         <!-- Benefit Start -->
         <section class="benefits-section">
@@ -262,8 +267,47 @@
                 </div>
             </div>
         </section>
-
         <!-- why choose us End -->
+
+        <!-- services Start -->
+        <section class="services-section">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>services</h4>
+                        <h2>We Provide The Best For You</h2>
+                    </div>
+                    <div class="col-md-6">
+                        <p>We have a team of expert eye surgeons with robust experiences in spectacle removal surgery, skilled paramedics and nursing staff to deliver you the <strong>best LASIK surgery in Delhi NCR</strong> at an affordable cost.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="image-boxx">
+                            <img src="images/surgeons.webp">
+                            <h3>LASIK</h3>
+                            <p>Laser assisted in situ keratomileusis is a corneal flap based procedure for correction of refractive error in eye. It can be used in patients with myopia, hypermetropia and astigmatism at ease. </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-boxx">
+                            <img src="images/eye.webp">
+                            <h3>FEMTO LASIK</h3>
+                            <p>Blade-free LASIK Eye Surgery is a leap ahead of Traditional LASIK Surgery where a Femtosecond laser is used to create a precise flap. while in the Traditional blade LASIK technique, the flap is made by hand.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-boxx">
+                            <img src="images/microscope.webp">
+                            <h3>TOUCHLESS LASIK</h3>
+                            <p>This method is biomechanically superior to flap-based Lasik in lower refractive errors, and the surgery gets completed in a single step only. It is safe for patients with thin cornea and bilateral eyes are treated in the same session.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- services End -->
 
         <!-- Footer Start-->
         <footer>
