--- a/index.html
+++ b/index.html
@@ -125,6 +125,72 @@
         </section>
         <!-- About Us End -->
 
+        <!-- why choose us Start -->
+        <section class="why-choose-us">
+            <div class="container-fluid cff">
+                <div class="row">
+                    <div class="col-md-6 col-6-pointers">
+                        <h4 class="ff text-white">why choose us ?</h4>
+                        <h2 class="ff text-white">Better Vision Deserves The Latest Technology</h2>
+                        <ul class="banner_ul_treatment">
+                          <li class="banner_li">NABH Certified</li>
+                          <li class="banner_li">14 World Class Eye Hospitals in India</li>
+                          <li class="banner_li">World Class Infrastructure</li>
+                          <li class="banner_li">Latest Technologies</li>
+                          <li class="banner_li">Highly Experienced and Trained Eye Specialists</li>
+                          <li class="banner_li">More than 2 Decades of experience in Eye Care</li>
+                          <li class="banner_li">Treated more than 10 Lac delighted patients</li>
+                          <li class="banner_li">Delivering the high-quality eye treatment</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 col-6-image-sec">
+                        <!-- <img src="images/Sharp-Sight-Better-Vision-Deserves-The-Latest-Technology.webp" width="100%"> -->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- why choose us End -->
+
+        <!-- services Start -->
+        <section class="services-section">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>services</h4>
+                        <h2>We Provide The Best For You</h2>
+                    </div>
+                    <div class="col-md-6">
+                        <p>We have a team of expert eye surgeons with robust experiences in spectacle removal surgery, skilled paramedics and nursing staff to deliver you the <strong>best LASIK surgery in Delhi NCR</strong> at an affordable cost.<br></p>
+                    </div>
+                </div>
+                <div class="row services_row_two">
+                    <div class="col-md-4">
+                        <div class="image-boxx">
+                            <img src="images/surgeons.webp">
+                            <h3>LASIK</h3>
+                            <p>Laser assisted in situ keratomileusis is a corneal flap based procedure for correction of refractive error in eye. It can be used in patients with myopia, hypermetropia and astigmatism at ease.<br><br> </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-boxx">
+                            <img src="images/eye.webp">
+                            <h3>FEMTO LASIK</h3>
+                            <p>Blade-free LASIK Eye Surgery is a leap ahead of Traditional LASIK Surgery where a Femtosecond laser is used to create a precise flap. while in the Traditional blade LASIK technique, the flap is made by hand.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-boxx">
+                            <img src="images/microscope.webp">
+                            <h3>TOUCHLESS LASIK</h3>
+                            <p>This method is biomechanically superior to flap-based Lasik in lower refractive errors, and the surgery gets completed in a single step only. It is safe for patients with thin cornea and bilateral eyes are treated in the same session.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- services End -->        
+
+
         <!-- Factoids Start -->
         <section id="counter_sec">
             <div class="container">
@@ -269,45 +335,6 @@
         </section>
         <!-- why choose us End -->
 
-        <!-- services Start -->
-        <section class="services-section">
-            <div class="container-fluid cf">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h4>services</h4>
-                        <h2>We Provide The Best For You</h2>
-                    </div>
-                    <div class="col-md-6">
-                        <p>We have a team of expert eye surgeons with robust experiences in spectacle removal surgery, skilled paramedics and nursing staff to deliver you the <strong>best LASIK surgery in Delhi NCR</strong> at an affordable cost.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="image-boxx">
-                            <img src="images/surgeons.webp">
-                            <h3>LASIK</h3>
-                            <p>Laser assisted in situ keratomileusis is a corneal flap based procedure for correction of refractive error in eye. It can be used in patients with myopia, hypermetropia and astigmatism at ease. </p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="image-boxx">
-                            <img src="images/eye.webp">
-                            <h3>FEMTO LASIK</h3>
-                            <p>Blade-free LASIK Eye Surgery is a leap ahead of Traditional LASIK Surgery where a Femtosecond laser is used to create a precise flap. while in the Traditional blade LASIK technique, the flap is made by hand.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="image-boxx">
-                            <img src="images/microscope.webp">
-                            <h3>TOUCHLESS LASIK</h3>
-                            <p>This method is biomechanically superior to flap-based Lasik in lower refractive errors, and the surgery gets completed in a single step only. It is safe for patients with thin cornea and bilateral eyes are treated in the same session.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- services End -->
 
         <!-- Footer Start-->
         <footer>
