new section added

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="image-boxx">
                             <img src="images/surgeons.webp">
                             <h3>LASIK</h3>
-                            <p>Laser assisted in situ keratomileusis is a corneal flap based procedure for correction of refractive error in eye. It can be used in patients with myopia, hypermetropia and astigmatism at ease.<br><br> </p>
+                            <p>Laser assisted in situ keratomileusis is a corneal flap based procedure for correction of refractive error in eye. It can be used in patients with myopia, hypermetropia and astigmatism at ease. </p>
                         </div>
                     </div>
                     <div class="col-md-4">
