--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="container-fluid cf">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="images/Sharp-Sight-A-Leading-Eyecare-Hospital.webp" width="100%">
+                        <img src="images/image1.png" width="100%">
                     </div>
                     <div class="col-md-6">
                         <h4>about us</h4>
@@ -190,6 +190,35 @@
         </section>
         <!-- services End -->        
 
+
+        <!-- Book Now Start -->
+
+        <section class="book_now_section">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-6">
+                        <form action="call_back.php" method="POST" name="Consult to Doctors">
+                            <div class="form-group">
+                                <input aria-describedby="emailHelp" class="form-control" id="your_name" name="your_name" placeholder="Enter Your Name" required="" type="text" />
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" id="mobile_number" name="mobile_number" placeholder="Enter Mobile No." required="" type="tel" />
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" id="email_id" name="email_id" placeholder="Enter Email Address" required="" type="email" />
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" id="cistomer_query" name="customer_query"placeholder="Your Query"></textarea>
+                            </div>
+                            <button class="btn btn-primary bttn_form" name="submit" type="submit">Submit</button>
+                        </form>
+                    </div>
+                    <div class="col-md-6"></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Book Now End -->
 
         <!-- Factoids Start -->
         <section id="counter_sec">
