all sections done

--- a/index.html
+++ b/index.html
@@ -197,28 +197,113 @@
             <div class="container-fluid cf">
                 <div class="row">
                     <div class="col-md-6">
-                        <form action="call_back.php" method="POST" name="Consult to Doctors">
-                            <div class="form-group">
-                                <input aria-describedby="emailHelp" class="form-control" id="your_name" name="your_name" placeholder="Enter Your Name" required="" type="text" />
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" id="mobile_number" name="mobile_number" placeholder="Enter Mobile No." required="" type="tel" />
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" id="email_id" name="email_id" placeholder="Enter Email Address" required="" type="email" />
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" id="cistomer_query" name="customer_query"placeholder="Your Query"></textarea>
-                            </div>
-                            <button class="btn btn-primary bttn_form" name="submit" type="submit">Submit</button>
-                        </form>
+                        <div class="bookform">
+                            <h3>
+                                At Sharp Sight, We Offer The Latest Touchless Lasik Procedure For Specs Removal
+                            </h3>
+                            <form action="call_back.php" method="POST"name="Consult to Doctors">
+                                <div class="form-group">
+                                    <input aria-describedby="emailHelp" class="form-control" id="your_name" name="your_name" placeholder="Enter Your Name" required="" type="text" />
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" id="mobile_number" name="mobile_number" placeholder="Enter Mobile No." required="" type="tel" />
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" id="email_id" name="email_id" placeholder="Enter Email Address" required="" type="email" />
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-control" id="cistomer_query" name="customer_query"placeholder="Your Query"></textarea>
+                                </div>
+                                <button class="btn btn-primary bttn_form" name="submit" type="submit">
+                                    Book Now
+                                </button>
+                            </form>
+                        </div>
                     </div>
-                    <div class="col-md-6"></div>
+                    <div class="col-md-6">
+                        <h4 class="ff text-white">Book Now</h4>
+                        <h2 class="ff text-white">Make An Appointment</h2>
+                        <h3 class="text-white book-number">+91 9641-919191</h3>
+                        <img src="images/Before-Lasik.webp" class="book-image">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Book Now End -->
+
+        <!-- Testimonial Start -->
+        <section class="testimonial_section">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="images/image2.png" width="100%">
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="ff">Testimonial</h4>
+                        <h2 class="ff">What They Say About Sharp Sight</h2>
+                        <div class="testimonial-slider">
+                            <div class="container">
+                                <div id="mycarousel" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <div class="row">
+                                                <div class="col-lg-12 ">
+                                                  <div class=" d-flex flex-column justify-content-center px-3">
+                                                      <p class="review text-center">"I have visited this hospital with my Grandmaa for her Cataract Problem. Consulted by Dr. Samir Sud. Very humble and understanding doctor. The staff here is also excellent. Hygiene and cleanliness was also maintained properly. Overall experience here was very good."</p>
+                                                      <div class="name d-flex align-items-center justify-content-center"> <span class="fa fa-minus pe-1"></span>
+                                                          <p class="m-0">Vandana Jolly</p>
+                                                      </div>
+                                                        
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <div class="row">
+                                                <div class="col-lg-12 ">
+                                                  <div class=" d-flex flex-column justify-content-center px-3">
+                                                      <p class="review text-center">"My mother was here for her cataract surgery. The facility at this Hospital is just amazing. The doctors are well experienced and the staff is all very cooperative and compassionate. "</p>
+                                                      <div class="name d-flex align-items-center justify-content-center"> <span class="fa fa-minus pe-1"></span>
+                                                          <p class="m-0">Arunabh Jain</p>
+                                                      </div>     
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                  <div class=" d-flex flex-column justify-content-center px-3">
+                                                      <p class="review text-center">"I am fully satisfied with all services at Sharp Sight Eye Hospitals (Place). My both eye cataract surgery done by Dr (NAME). I would like to thank all the staff and doctors who treated me like their families. "</p>
+                                                      <div class="name d-flex align-items-center justify-content-center"> <span class="fa fa-minus pe-1"></span>
+                                                          <p class="m-0">Sobha Rani</p>
+                                                      </div>
+                                                  </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                  <div class=" d-flex flex-column justify-content-center px-3">
+                                                      <p class="review text-center">"I have visited this hospital with my Grandmaa for her Cataract Problem. Consulted by Dr. Kamal Very humble and understanding doctor. The staff here is also excellent. Hygiene and cleanliness was also maintained properly. Overall experience here was very good."</p>
+                                                      <div class="name d-flex align-items-center justify-content-center"> <span class="fa fa-minus pe-1"></span>
+                                                          <p class="m-0">Vishal Grover</p>
+                                                      </div>
+                                                  </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <!-- Book Now End -->
+        <!-- Testimonial End -->
 
         <!-- Factoids Start -->
         <section id="counter_sec">
@@ -253,9 +338,53 @@
         </section>
         <!-- Factoids End -->
 
+        <section class="ourapproach">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h4 class="ff text-white text-center">Our Approach</h4>
+                        <h2 class="text-white ff text-center">
+                            How It Work ?
+                        </h2>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-md-4">
+                        <div class="image-box">
+                            <img src="images/mobile.webp">
+                            <h3>Make An Appointment</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-box">
+                            <img src="images/eye.webp">
+                            <h3>General Check Up</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-box">
+                            <img src="images/treatement.webp">
+                            <h3>Get Treatment</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <!-- FAQS Start -->
         <section class="faqs">
             <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="ff text-center">
+                            FAQs
+                        </h2>
+                        <p class="text-center">
+                            Most Frequent Questions And Answers
+                        </p>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="accordion" id="accordionExample">
@@ -338,33 +467,6 @@
         </section>
         <!-- FAQS End -->
 
-        <!-- why choose us Start -->
-        <section class="why-choose-us">
-            <div class="container-fluid cff">
-                <div class="row">
-                    <div class="col-md-6 col-6-pointers">
-                        <h4 class="ff text-white">why choose us ?</h4>
-                        <h2 class="ff text-white">Better Vision Deserves The Latest Technology</h2>
-                        <ul class="banner_ul_treatment">
-                          <li class="banner_li">NABH Certified</li>
-                          <li class="banner_li">14 World Class Eye Hospitals in India</li>
-                          <li class="banner_li">World Class Infrastructure</li>
-                          <li class="banner_li">Latest Technologies</li>
-                          <li class="banner_li">Highly Experienced and Trained Eye Specialists</li>
-                          <li class="banner_li">More than 2 Decades of experience in Eye Care</li>
-                          <li class="banner_li">Treated more than 10 Lac delighted patients</li>
-                          <li class="banner_li">Delivering the high-quality eye treatment</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 col-6-image-sec">
-                        <!-- <img src="images/Sharp-Sight-Better-Vision-Deserves-The-Latest-Technology.webp" width="100%"> -->
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- why choose us End -->
-
-
         <!-- Footer Start-->
         <footer>
             <section class="footer">
@@ -402,7 +504,7 @@
                         <button class="close" data-dismiss="modal" type="button">&times;</button>
                     </div>
                     <!-- Modal body -->
-                    <div class="modal-body">
+                    <div class="modal-body bookform">
                         <form action="call_back.php" method="POST" name="Consult to Doctors">
                             <div class="form-group">
                                 <input aria-describedby="emailHelp" class="form-control" id="your_name" name="your_name" placeholder="Enter Your Name" required="" type="text" />
@@ -429,6 +531,13 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
         <script>
+            var myCarousel = document.querySelector('#myCarousel')
+                var carousel = new bootstrap.Carousel(myCarousel, {
+                autoplay:true,
+                interval: 2000
+            })
+        </script>
+        <script>
           $(document).ready(function() {
             $('.counter').each(function () {
               $(this).prop('Counter',0).animate({
@@ -446,3 +555,4 @@
      </script>
     </body>
 </html>
+
